@@ -1,5 +1,5 @@
 $|=1;
-print "1..6\n";
+print "1..9\n";
 
 use Coro;
 
@@ -21,4 +21,16 @@ print $c1->ready ? "not " : "", "ok 4\n";
 cede;
 
 print "ok 6\n";
+
+$c1->on_destroy (sub {
+   print "ok 8\n";
+});
+
+$c1->cancel;
+
+print "ok 7\n";
+
+cede;
+
+print "ok 9\n";
 
