@@ -4,6 +4,7 @@ TODO: better (earlier) error messages on broken transfer's
 TODO: give some sensible deifnition to running an event loop
 as coroutine with higher priority.
 
+	- implement $coro->on_destroy.
 	- fix nice adding, not subtracting, from priority.
         - fix ->prio and api_is_ready (patch by Mark Hinds).
 
